# DevTrackPro

./: .gitignore  App.tsx  README.md  constants.tsx  electron-main.js  index.css  index.html  metadata.json  package-lock.json  package.json  splash.html  types.ts  vite.config.ts
components/: AlertModal.tsx  BillingView.tsx  ClientList.tsx  ClientModal.tsx  ConsumptionView.tsx  CustomerList.tsx  CustomerModal.tsx  Dashboard.tsx  DatePicker.tsx  FilenameModal.tsx  Header.tsx  IHRView.tsx  Icon.tsx  OrdersList.tsx  Sidebar.tsx  TicketModal.tsx  TicketsList.tsx  WorkLogModal.tsx  WorkLogView.tsx
hooks/: useAppData.ts
msi/: DevTrack Pro_1.0.0_x64_en-US.msi
services/: databaseService.ts  geminiService.ts  logService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
